--- a/app/src/main/res/layout/list_sticky_header_download.xml
+++ b/app/src/main/res/layout/list_sticky_header_download.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_material_light"
+    android:background="?sticky_header_background"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="8dp"
@@ -14,7 +14,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dip"
-        android:textAllCaps="true"
-        android:textColor="@color/list_header"
-        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+        android:textAllCaps="true" />
 </LinearLayout>
