--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?android:windowBackground"
     tools:context=".ui.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
@@ -11,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:elevation="@dimen/toolbar_elevation" />
+        android:elevation="@dimen/toolbar_elevation"
+        app:theme="@style/Theme.XposedInstaller.Toolbar" />
 
     <FrameLayout
         android:id="@+id/container"
