--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.XposedInstaller" parent="Theme.XposedInstaller.Base">
-    </style>
-
-    <!-- Base application theme. -->
-    <style name="Theme.XposedInstaller.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Base application light theme. -->
+    <style name="Theme.XposedInstaller.Light.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style
-        name="Theme.XposedInstaller.Light"
-        parent="Theme.XposedManager" >
+    <!-- Base application dark theme. -->
+    <style name="Theme.XposedInstaller.Dark.Base" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="Theme.XposedInstaller.Light" parent="Theme.XposedInstaller.Light.Base" >
         <item name="android:windowBackground">@color/background_material_light</item>
+        <item name="sticky_header_background">@color/sticky_header_background_light</item>
+        <item name="list_download_item_color">@color/list_download_item_color_light</item>
         <item name="background_card">@drawable/background_card_light</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_light</item>
@@ -22,10 +26,10 @@
         <item name="download_status_installed">@android:color/holo_orange_dark</item>
     </style>
 
-    <style
-        name="Theme.XposedInstaller.Dark"
-        parent="Theme.XposedManager" >
+    <style name="Theme.XposedInstaller.Dark" parent="Theme.XposedInstaller.Dark.Base" >
         <item name="android:windowBackground">@color/background_material_dark</item>
+        <item name="sticky_header_background">@color/sticky_header_background_dark</item>
+        <item name="list_download_item_color">@color/list_download_item_color_dark</item>
         <item name="background_card">@drawable/background_card_dark</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
@@ -33,11 +37,18 @@
         <item name="download_status_installed">@android:color/holo_orange_light</item>
     </style>
 
-    <style
-        name="Theme.XposedInstaller.Dark.Black" >
+    <style name="Theme.XposedInstaller.Dark.Black" parent="Theme.XposedInstaller.Dark" >
         <item name="android:windowBackground">@color/app_background_black</item>
+        <item name="list_download_item_color">@color/list_download_item_color_black</item>
         <item name="background_card">@drawable/background_card_black</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_black</item>
+    </style>
+
+
+    <style name="Theme.XposedInstaller.Toolbar" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="actionMenuTextColor">@color/abc_primary_text_material_light</item>
+        <item name="android:textColorSecondary">@color/abc_secondary_text_material_light</item>
     </style>
 
 </resources>
