theme: fix module card view item color on the dark theme

--- a/app/src/main/res/layout/list_item_module.xml
+++ b/app/src/main/res/layout/list_item_module.xml
@@ -12,7 +12,8 @@
     android:layout_marginBottom="3dip"
     android:foreground="?selectableItemBackground"
     android:elevation="2dip"
-    card_view:cardCornerRadius="2dip" >
+    card_view:cardCornerRadius="2dip"
+    card_view:cardBackgroundColor="?attr/list_download_item_color">
 
     <RelativeLayout
         android:layout_width="match_parent"
