--- a/app/src/main/res/menu/menu_download.xml
+++ b/app/src/main/res/menu/menu_download.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_menu_search"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="@string/menuSearch"/>
