--- a/app/src/main/res/menu/menu_logs.xml
+++ b/app/src/main/res/menu/menu_logs.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_menu_refresh"
-        android:showAsAction="ifRoom|withText"
+        app:showAsAction="ifRoom|withText"
         android:title="@string/menuReload"/>
     <item
         android:id="@+id/menu_save"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/menuSaveToSd"/>
     <item
         android:id="@+id/menu_send"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/menuSend"/>
     <item
         android:id="@+id/menu_clear"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/menuClearLog"/>
 
 </menu>
