--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:theme="@style/Theme.XposedInstaller.Toolbar"
+            app:theme="@style/Theme.XposedInstaller.Toolbar"\
             app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.design.widget.TabLayout
@@ -23,6 +23,8 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:tabTextAppearance="@style/TextAppearance.Design.Tab"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:tabIndicatorColor="@android:color/white"
             app:tabMode="scrollable" />
 
     </android.support.design.widget.AppBarLayout>
