--- a/app/src/main/res/layout/download_moreinfo.xml
+++ b/app/src/main/res/layout/download_moreinfo.xml
@@ -9,6 +9,7 @@
     android:foreground="?selectableItemBackground"
     android:elevation="2dp"
     card_view:cardCornerRadius="2dp"
+    card_view:cardUseCompatPadding="true"
     card_view:cardBackgroundColor="?attr/list_download_item_color" >
 
     <LinearLayout
@@ -31,5 +32,4 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </LinearLayout>
-
 </android.support.v7.widget.CardView>
