--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -15,6 +15,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:theme="@style/Theme.XposedInstaller.Toolbar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.design.widget.TabLayout
