--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="?android:windowBackground"
-    tools:context=".ui.SettingsActivity">
+    android:background="?android:windowBackground" >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,7 +12,8 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="@dimen/toolbar_elevation"
-        app:theme="@style/Theme.XposedInstaller.Toolbar" />
+        app:theme="@style/Theme.XposedInstaller.Toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <FrameLayout
         android:id="@+id/container"
