download details: cleanup

--- a/app/src/main/res/layout/list_item_version.xml
+++ b/app/src/main/res/layout/list_item_version.xml
@@ -15,7 +15,7 @@
     card_view:cardCornerRadius="2dip"
     card_view:cardBackgroundColor="?attr/list_download_item_color">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
