modules: improve xposed not active layout

--- a/app/src/main/res/layout/xposed_not_active_note.xml
+++ b/app/src/main/res/layout/xposed_not_active_note.xml
@@ -1,9 +1,46 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/card_view"
+    android:layout_gravity="center"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/warning_box"
-    android:padding="3dp"
-    android:text="@string/xposed_not_active"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    tools:ignore="Overdraw" />
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:layout_marginLeft="8dip"
+    android:layout_marginRight="8dip"
+    android:layout_marginTop="3dip"
+    android:layout_marginBottom="3dip"
+    android:foreground="?selectableItemBackground"
+    android:elevation="2dip"
+    card_view:cardCornerRadius="2dip"
+    card_view:cardBackgroundColor="?attr/list_download_item_color" >
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_nav_about"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imageView"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/xposed_not_active"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            tools:ignore="Overdraw" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
