--- a/app/src/main/res/layout/list_item_module.xml
+++ b/app/src/main/res/layout/list_item_module.xml
@@ -4,7 +4,7 @@
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="fill_parent"
-    android:layout_height="@dimen/item_module_height"
+    android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:layout_marginLeft="8dip"
     android:layout_marginRight="8dip"
@@ -15,72 +15,73 @@
     card_view:cardCornerRadius="2dip"
     card_view:cardBackgroundColor="?attr/list_download_item_color">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dip">
+        android:layout_height="wrap_content"
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:padding="8dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="48dip"
-            android:layout_height="48dip"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/warning"
-            android:layout_toEndOf="@+id/warning" />
+            android:layout_height="48dip" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:singleLine="false"
-            android:textIsSelectable="false"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_alignTop="@+id/checkbox"
-            android:layout_toRightOf="@+id/icon"
-            android:layout_toEndOf="@+id/icon" />
-
-        <TextView
-            android:id="@+id/version_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:textIsSelectable="false"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@android:color/tertiary_text_dark"
-            android:layout_alignBaseline="@+id/title"
-            android:layout_alignBottom="@+id/title"
-            android:layout_toLeftOf="@+id/checkbox"
-            android:layout_toStartOf="@+id/checkbox" />
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textIsSelectable="false"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_below="@+id/title"
-            android:layout_alignLeft="@+id/title"
-            android:layout_alignStart="@+id/title" />
+            android:layout_weight="1"
+            android:layout_marginRight="4dip"
+            android:layout_marginLeft="4dip"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/warning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/warning"
-            android:visibility="gone" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="4dip"
+                    android:layout_weight="1"
+                    android:singleLine="false"
+                    android:textIsSelectable="false"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                <TextView
+                    android:id="@+id/version_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dip"
+                    android:gravity="right"
+                    android:textIsSelectable="false"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@android:color/tertiary_text_dark" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textIsSelectable="false"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/warning"
+                android:visibility="gone" />
+        </LinearLayout>
 
         <CheckBox
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="top"
-            android:focusable="false"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
+            android:focusable="false" />
+
+    </LinearLayout>
 </android.support.v7.widget.CardView>
