--- a/app/src/main/res/layout/list_item_download.xml
+++ b/app/src/main/res/layout/list_item_download.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
     android:id="@+id/list_item_download"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/list_download_item_color"
-    android:foreground="?android:attr/selectableItemBackground" >
+    android:foreground="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dip" >
+        android:padding="16dip">
 
         <TextView
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceListItem" />
+            android:textAppearance="?android:attr/textAppearanceListItem"/>
 
         <TextView
             android:id="@android:id/text2"
@@ -24,7 +25,7 @@
             android:layout_alignLeft="@android:id/text1"
             android:layout_below="@android:id/text1"
             android:layout_marginBottom="8dip"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         <TextView
             android:id="@+id/downloadStatus"
@@ -33,7 +34,7 @@
             android:layout_alignLeft="@android:id/text2"
             android:layout_below="@android:id/text2"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/timestamps"
@@ -41,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@android:id/text2"
             android:layout_below="@id/downloadStatus"
-            android:textColor="@android:color/tertiary_text_dark"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/tertiary_text_dark"/>
     </RelativeLayout>
 </FrameLayout>
