--- a/app/src/main/res/drawable/background_card_pressed_black.xml
+++ b/app/src/main/res/drawable/background_card_pressed_black.xml
@@ -3,28 +3,31 @@
 <!-- modified from from https://gist.github.com/iheanyi/5774841 -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle"
-               android:dither="true">
+        <shape
+            android:dither="true"
+            android:shape="rectangle">
 
             <corners android:radius="2dp"/>
 
-            <solid android:color="@color/card_shadow_black" />
+            <solid android:color="@color/card_shadow_black"/>
 
         </shape>
     </item>
 
     <item android:bottom="2dp">
-        <shape android:shape="rectangle"
-               android:dither="true">
+        <shape
+            android:dither="true"
+            android:shape="rectangle">
 
-            <corners android:radius="2dp" />
+            <corners android:radius="2dp"/>
 
-            <solid android:color="@color/card_background_pressed_black" />
+            <solid android:color="@color/card_background_pressed_black"/>
 
-            <padding android:bottom="8dp"
-                     android:left="8dp"
-                     android:right="8dp"
-                     android:top="8dp" />
+            <padding
+                android:bottom="8dp"
+                android:left="8dp"
+                android:right="8dp"
+                android:top="8dp"/>
         </shape>
     </item>
 </layer-list>
