--- a/app/src/main/res/layout/download_moreinfo.xml
+++ b/app/src/main/res/layout/download_moreinfo.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     android:id="@+id/card_view"
-    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_marginTop="6dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
-    android:foreground="?selectableItemBackground"
+    android:layout_marginTop="6dp"
     android:elevation="2dp"
+    android:foreground="?selectableItemBackground"
+    card_view:cardBackgroundColor="?attr/list_download_item_color"
     card_view:cardCornerRadius="2dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardBackgroundColor="?attr/list_download_item_color" >
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="8dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             android:id="@android:id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@android:id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
