--- a/app/src/main/res/layout/list_item_version.xml
+++ b/app/src/main/res/layout/list_item_version.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     android:id="@+id/card_view"
-    android:layout_gravity="center"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:layout_gravity="center"
+    android:layout_marginBottom="3dip"
     android:layout_marginLeft="8dip"
     android:layout_marginRight="8dip"
     android:layout_marginTop="3dip"
-    android:layout_marginBottom="3dip"
-    android:foreground="?selectableItemBackground"
     android:elevation="2dip"
-    card_view:cardCornerRadius="2dip"
-    card_view:cardBackgroundColor="?attr/list_download_item_color">
+    android:foreground="?selectableItemBackground"
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    card_view:cardBackgroundColor="?attr/list_download_item_color"
+    card_view:cardCornerRadius="2dip">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dip" >
+        android:padding="8dip">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:baselineAligned="false" >
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -32,20 +33,20 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txtStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                 <TextView
                     android:id="@+id/txtVersion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textIsSelectable="false" />
+                    android:textIsSelectable="false"/>
             </LinearLayout>
 
             <LinearLayout
@@ -54,7 +55,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txtRelType"
@@ -63,7 +64,7 @@
                     android:textAllCaps="true"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textIsSelectable="false"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"/>
 
                 <TextView
                     android:id="@+id/txtUploadDate"
@@ -72,14 +73,14 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="?android:attr/textColorTertiary"
                     android:textIsSelectable="false"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"/>
             </LinearLayout>
         </LinearLayout>
 
         <de.robv.android.xposed.installer.widget.DownloadView
             android:id="@+id/downloadView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/txtChangesTitle"
@@ -88,13 +89,13 @@
             android:layout_marginTop="8dp"
             android:text="@string/changes"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txtChanges"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
