--- a/app/src/main/res/layout/list_item_welcome.xml
+++ b/app/src/main/res/layout/list_item_welcome.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
-    android:layout_marginTop="?attr/actionBarSize"
-    android:minHeight="?android:attr/listPreferredItemHeight" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:minHeight="?android:attr/listPreferredItemHeight"
+                android:paddingBottom="4dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:paddingTop="4dp">
 
     <TextView
         android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItem" />
+        android:textAppearance="?android:attr/textAppearanceListItem"/>
 
     <TextView
         android:id="@+id/txtFrameworkUpdateAvailable"
@@ -24,7 +24,7 @@
         android:text="@string/welcome_framework_update_available"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/welcome_framework_update_available"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/txtUpdateAvailable"
@@ -35,7 +35,7 @@
         android:text="@string/welcome_update_available"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/welcome_update_available"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <TextView
         android:id="@android:id/text2"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@android:id/text1"
         android:layout_below="@id/txtUpdateAvailable"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"/>
 
     <TextView
         android:id="@+id/txtXposedNotActive"
@@ -54,6 +54,6 @@
         android:text="@string/xposed_not_active"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/warning"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </RelativeLayout>
