--- a/app/src/main/res/layout/tab_downloader.xml
+++ b/app/src/main/res/layout/tab_downloader.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="?attr/actionBarSize"
-    tools:context=".DownloadFragment" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_marginTop="?attr/actionBarSize"
+              android:orientation="vertical"
+              tools:context=".DownloadFragment">
 
     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/listModules"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:drawSelectorOnTop="true"
-        android:scrollbarStyle="outsideOverlay"
-        android:fastScrollEnabled="true" />
+        android:fastScrollEnabled="true"
+        android:scrollbarStyle="outsideOverlay"/>
 
 </LinearLayout>
