--- a/app/src/main/res/layout/tab_logs.xml
+++ b/app/src/main/res/layout/tab_logs.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
     android:id="@+id/svLog"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize" >
+    android:layout_marginTop="?attr/actionBarSize">
 
     <HorizontalScrollView
         android:id="@+id/hsvLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView
+
+    <TextView
             android:id="@+id/txtLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp" />
+            android:padding="8dp"/>
     </HorizontalScrollView>
 
 </ScrollView>
