--- a/app/src/main/res/menu/menu_logs.xml
+++ b/app/src/main/res/menu/menu_logs.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_menu_refresh"
-        app:showAsAction="ifRoom|withText"
-        android:title="@string/menuReload"/>
+        android:title="@string/menuReload"
+        app:showAsAction="ifRoom|withText"/>
     <item
         android:id="@+id/menu_save"
-        app:showAsAction="never"
-        android:title="@string/menuSaveToSd"/>
+        android:title="@string/menuSaveToSd"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/menu_send"
-        app:showAsAction="never"
-        android:title="@string/menuSend"/>
+        android:title="@string/menuSend"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/menu_clear"
-        app:showAsAction="never"
-        android:title="@string/menuClearLog"/>
+        android:title="@string/menuClearLog"
+        app:showAsAction="never"/>
 
 </menu>
